Add shared assets setup Assets are now being shared across all 3 frontend app and are coming from money-to-prisoners-common. This adds the setup needed to import assets/templates from that package.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ staticfiles/
 media/
 .build
 
+# Sass-cache
+*.sass-cache/
+
 # sublime stuff
 *.sublime-workspace
 *.sublime-project
@@ -17,6 +20,12 @@ venv/
 
 # Ignore settings/local.py
 */settings/local.py
+
+# Node Stuff
+node_modules
+
+mtp_bank_admin/assets-src/bower_components
+mtp_bank_admin/assets/
 
 # Docker make targets
 .dev_django_container
