--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "./node_modules/.bin/wdio test/wdio.conf.js",
     "test-headless": "./node_modules/.bin/wdio test/wdio.headless.conf.js",
     "test-wip": "./node_modules/.bin/wdio test/wdio.wip.conf.js",
-    "postinstall": "./node_modules/bower/bin/bower --allow-root install"
+    "postinstall": "./node_modules/bower/bin/bower --allow-root install && ./node_modules/.bin/selenium-standalone install"
   },
   "license": "MIT",
   "dependencies": {
@@ -36,6 +36,7 @@
     "cucumber": "^0.5.3",
     "del": "^2.0.2",
     "globule": "^0.2.0",
+    "phantomjs": "^1.9.18",
     "q": "^1.4.1",
     "request": "^2.63.0",
     "require-dir": "^0.3.0",
