--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "scripts": {
     "start": "./node_modules/gulp/bin/gulp.js serve",
     "test": "./node_modules/.bin/wdio test/wdio.conf.js",
+    "test-init": "./node_modules/.bin/selenium-standalone install",
     "test-headless": "./node_modules/.bin/wdio test/wdio.headless.conf.js",
     "test-wip": "./node_modules/.bin/wdio test/wdio.wip.conf.js",
-    "postinstall": "./node_modules/bower/bin/bower --allow-root install && ./node_modules/.bin/selenium-standalone install"
+    "postinstall": "./node_modules/bower/bin/bower --allow-root install"
   },
   "license": "MIT",
   "dependencies": {
