--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "money-to-prisoners-common": "ministryofjustice/money-to-prisoners-common"
+    "money-to-prisoners-common": "ministryofjustice/money-to-prisoners-common",
+    "phantomjs": "^1.9.19"
   }
 }
