--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "money-to-prisoners-common": "ministryofjustice/money-to-prisoners-common",
+    "money-to-prisoners-common": "ministryofjustice/money-to-prisoners-common#master",
     "phantomjs": "^1.9.19"
   }
 }
