--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *.pyc
 include/
 lib/
-staticfiles/
+static/
 media/
 .build
 
@@ -23,7 +23,9 @@ venv/
 
 # Node Stuff
 node_modules
+npm-debug.log
 
+# App assets
 mtp_bank_admin/assets-src/bower_components
 mtp_bank_admin/assets/
 
@@ -32,3 +34,6 @@ mtp_bank_admin/assets/
 
 # failed test screenshots
 test/errorshots/
+
+# testing log
+ghostdriver.log
