--- a/.jshintrc
+++ b/.jshintrc
@@ -12,7 +12,7 @@
   "regexp": true,
   "undef": true,
   "unused": true,
-  "strict": true,
+  "globalstrict": true,
   "trailing": true,
   "smarttabs": true,
   "white": true,
