Add code style unit test and improve code style generally

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [flake8]
-exclude = node_modules/*,venv/*
+exclude = .git/,node_modules/,venv/
 max-complexity = 10
-max-line-length = 119
+max-line-length = 120
