--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,16 @@
-*.pyc
-include/
-lib/
-staticfiles/
-media/
-.build
+# general
+*.DS_Store
+*.py?
+*~
 
-# sublime stuff
+# editors
+.idea/
 *.sublime-workspace
 *.sublime-project
 
-# Virtual env
+# project
+mtp_bank_admin/settings/local.py
+mtp_bank_admin/assets/
+node_modules/
+static/
 venv/
-
-# Mac crap
-*.DS_Store
