Correct the settings module specified in uwsgi config

--- a/conf/uwsgi/bank_admin.ini
+++ b/conf/uwsgi/bank_admin.ini
@@ -11,7 +11,7 @@ master = true
 enable-threads = true
 processes = 2
 chdir = /app
-env = DJANGO_SETTINGS_MODULE=mtp_%n.settings.prod
+env = DJANGO_SETTINGS_MODULE=mtp_%n.settings.docker
 virtualenv = /app/venv
 module = mtp_%n.wsgi:application
 post-buffering = 1
