Output logs in JSON format to enable ELK to read the structures

--- a/conf/uwsgi/bank_admin.ini
+++ b/conf/uwsgi/bank_admin.ini
@@ -16,3 +16,6 @@ virtualenv = /app/venv
 module = mtp_%n.wsgi:application
 post-buffering = 1
 http-timeout = 20
+
+; format uWSGI logs as JSON for ELK
+log-format = {"timestamp_msec": %(tmsecs), "@fields.logger": "uWSGI-Request", "@fields.http_host": "%(host)", "@fields.request_uri": "%(uri)", "@fields.request_method": "%(method)", "@fields.status": %(status), "@fields.response_time": %(micros)}
