Set up translation

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-*.pyc
+*.py[cod]
+*.mo
+*.pot
 include/
 lib/
 static/
@@ -35,5 +37,6 @@ mtp_bank_admin/assets/
 # failed test screenshots
 test/errorshots/
 
-# testing log
+# selenium
+geckodriver.log
 ghostdriver.log
