Use a new build process • remove dependencies on make, shell scripts and fs-watch • run uWSGI directly rather than from within make or shell scripts • generate package.json rather than installing dependencies directly • use es-lint and sass-lint

--- a/.dockerignore
+++ b/.dockerignore
@@ -9,9 +9,20 @@
 *.sublime-workspace
 *.sublime-project
 
-# project
-mtp_bank_admin/settings/local.py
-mtp_bank_admin/assets/
+# sass & node.js
+*.sass-cache/
+.eslintcache/
 node_modules/
+npm-debug.log
+
+# project
+Dockerfile
+docker-compose.yml
+package.json
+webpack.config.js
+mtp_bank_admin/assets/
+mtp_bank_admin/settings/local.py
+mtp_bank_admin/templates/govuk_template
 static/
+media/
 venv/
