--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,11 @@
+[mtp]
+app = bank_admin
+django_settings = mtp_bank_admin.settings
+
+port = 8002
+browsersync_port = 3002
+browsersync_ui_port = 3032
+
 [flake8]
 exclude = .git/,node_modules/,venv/
 max-complexity = 10
