Ignore lock files created by npm

--- a/.dockerignore
+++ b/.dockerignore
@@ -19,6 +19,7 @@ npm-debug.log
 Dockerfile
 docker-compose.yml
 package.json
+package-lock.json
 webpack.config.js
 mtp_bank_admin/assets/
 mtp_bank_admin/settings/local.py
