--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ npm-debug.log
 # app-specific
 docker-compose.yml
 package.json
+package-lock.json
 webpack.config.js
 mtp_bank_admin/assets/
 mtp_bank_admin/settings/local.py
