--- a/bank_admin.ini
+++ b/bank_admin.ini
@@ -21,4 +21,4 @@ spooler-chdir = %d
 spooler-import = mtp_%n/tasks.py
 
 ; format uWSGI logs as JSON for ELK
-log-format = {"timestamp_msec": %(tmsecs), "@fields.logger": "uWSGI-Request", "@fields.http_host": "%(host)", "@fields.request_uri": "%(uri)", "@fields.request_method": "%(method)", "@fields.status": %(status), "@fields.response_time": %(micros)}
+log-format = {"timestamp": "%(ltime)", "timestamp_msec": %(tmsecs), "@fields.logger": "uWSGI-Request", "@fields.http_host": "%(host)", "@fields.request_uri": "%(uri)", "@fields.request_method": "%(method)", "@fields.status": %(status), "@fields.response_time": %(micros)}
