Clear file cache at the end of each day

--- a/bank_admin.ini
+++ b/bank_admin.ini
@@ -27,3 +27,4 @@ cron = 50 9 -1 -1 -1 %d/venv/bin/python %d/manage.py create_disbursements_file
 cron = 55 9 -1 -1 -1 %d/venv/bin/python %d/manage.py create_adi_journal_file
 cron = 0 10 -1 -1 -1 %d/venv/bin/python %d/manage.py create_bank_statement_file
 cron = 5 10 -1 -1 -1 %d/venv/bin/python %d/manage.py create_refund_file
+cron = 0 23 -1 -1 -1 %d/venv/bin/python %d/manage.py clear_file_cache
