--- a/bank_admin.ini
+++ b/bank_admin.ini
@@ -23,8 +23,9 @@ spooler-import = mtp_%n/tasks.py
 ; format uWSGI logs as JSON for ELK
 log-format = {"timestamp": "%(ltime)", "timestamp_msec": %(tmsecs), "@fields.logger": "uWSGI-Request", "@fields.http_host": "%(host)", "@fields.request_uri": "%(uri)", "@fields.request_method": "%(method)", "@fields.status": %(status), "@fields.response_time": %(micros)}
 
-cron = 50 4 -1 -1 -1 %d/venv/bin/python %d/manage.py create_disbursements_file
+cron = 40 9 -1 -1 -1 %d/venv/bin/python %d/manage.py create_disbursements_file
 cron = 55 9 -1 -1 -1 %d/venv/bin/python %d/manage.py create_adi_journal_file
 cron = 0 10 -1 -1 -1 %d/venv/bin/python %d/manage.py create_bank_statement_file
 cron = 5 10 -1 -1 -1 %d/venv/bin/python %d/manage.py create_refund_file
+cron = 0 11 -1 -1 -1 %d/venv/bin/python %d/manage.py send_private_estate_emails --scheduled
 cron = 0 23 -1 -1 -1 %d/venv/bin/python %d/manage.py clear_file_cache
