Add ECR clean-up tasks to CircleCI config …deleting untagged images and all images in a non-master branch except the current (i.e. the latest in a PR) …so that ECR policy limit of 40 images is not hit

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,6 +55,32 @@ jobs:
               docker tag ${tag} ${ECR_ENDPOINT}/prisoner-money/money-to-prisoners:${app}
               docker push ${ECR_ENDPOINT}/prisoner-money/money-to-prisoners:${app}
             fi
+            docker logout ${ECR_ENDPOINT}
+      - run:
+          name: Clean up ECR
+          command: |
+            source /tmp/mtp-env.sh
+            echo "Cleaning ECR"
+
+            delete_images() {
+              if [[ "${IMAGES_TO_DELETE}" ]]; then
+                AWS_ECR_ARGS=
+                for IMAGE_TO_DELETE in ${IMAGES_TO_DELETE}; do
+                  AWS_ECR_ARGS="${AWS_ECR_ARGS} imageDigest=${IMAGE_TO_DELETE}"
+                done
+                aws ecr batch-delete-image --repository-name prisoner-money/money-to-prisoners --image-ids ${AWS_ECR_ARGS}
+              fi
+            }
+
+            echo "Deleting untagged images"
+            IMAGES_TO_DELETE=$(aws ecr list-images --repository-name prisoner-money/money-to-prisoners --filter tagStatus=UNTAGGED --query 'imageIds[*].imageDigest' --output text)
+            delete_images
+
+            if [[ "${CIRCLE_BRANCH}" != "master" ]]; then
+              echo "Deleting other images from branch ${CIRCLE_BRANCH}"
+              IMAGES_TO_DELETE=$(aws ecr describe-images --repository-name prisoner-money/money-to-prisoners --query 'imageDetails[?contains(map(&starts_with(@, '"'"${app}.${CIRCLE_BRANCH}."'"'), @.imageTags), `true`) && ! contains(@.imageTags, '"'"${tag}"'"')].imageDigest' --output text)
+              delete_images
+            fi
 workflows:
   version: 2
   build-test-push:
