Set uwsgi buffer-size to a higher value

--- a/bank_admin.ini
+++ b/bank_admin.ini
@@ -14,6 +14,7 @@ chdir = %d
 virtualenv = %d/venv
 module = mtp_%n.wsgi:application
 post-buffering = 1
+buffer-size = 12288
 http-timeout = 300
 
 spooler = %d/spooler
