User "mtp" Docker user to have a writeable home directory

--- a/bank_admin.ini
+++ b/bank_admin.ini
@@ -14,10 +14,10 @@ virtualenv = %d/venv
 module = mtp_%n.wsgi:application
 
 http = :8080
-uid = www-data
-gid = www-data
+uid = mtp
+gid = mtp
 chmod-socket = 666
-chown-socket = www-data
+chown-socket = mtp
 
 no-defer-accept = 1
 post-buffering = 1
