--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,6 @@ browsersync_port = 3002
 browsersync_ui_port = 3032
 
 [flake8]
-exclude = .git/,node_modules/,venv/
+exclude = .git/,node_modules/,venv/,mtp_bank_admin/settings/local.py
 max-complexity = 10
 max-line-length = 120
