--- a/bank_admin.ini
+++ b/bank_admin.ini
@@ -42,6 +42,7 @@ spooler-import = mtp_%n/tasks.py
 cron = 40 9 -1 -1 -1 %d/venv/bin/python %d/manage.py create_disbursements_file
 cron = 55 9 -1 -1 -1 %d/venv/bin/python %d/manage.py create_adi_journal_file
 cron = 0 10 -1 -1 -1 %d/venv/bin/python %d/manage.py create_bank_statement_file
-cron = 5 10 -1 -1 -1 %d/venv/bin/python %d/manage.py create_refund_file
+# Access Pay refunds files are always empty now so pre-caching is not needed (and raises an error):
+# cron = 5 10 -1 -1 -1 %d/venv/bin/python %d/manage.py create_refund_file
 cron = 0 11 -1 -1 -1 %d/venv/bin/python %d/manage.py send_private_estate_emails --scheduled
 cron = 0 23 -1 -1 -1 %d/venv/bin/python %d/manage.py clear_file_cache
