Switch from using Mailgun (via django-anymail) to GOV.UK Notify and install template-checking periodic task

--- a/bank_admin.ini
+++ b/bank_admin.ini
@@ -46,3 +46,4 @@ cron = 0 10 -1 -1 -1 %d/venv/bin/python %d/manage.py create_bank_statement_file
 # cron = 5 10 -1 -1 -1 %d/venv/bin/python %d/manage.py create_refund_file
 cron = 0 11 -1 -1 -1 %d/venv/bin/python %d/manage.py send_private_estate_emails --scheduled
 cron = 0 23 -1 -1 -1 %d/venv/bin/python %d/manage.py clear_file_cache
+cron = 12 8 -1 -1 1 %d/venv/bin/python %d/manage.py check_notify_templates --verbosity 2
