--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,6 @@ updates:
   - package-ecosystem: pip
     directory: /requirements/
     schedule:
-      interval: weekly
+      interval: monthly
     pull-request-branch-name:
       separator: '-'
